--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -29,7 +29,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
-                <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
+                <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp;
                   Add New User
                 </a>
