--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -29,9 +29,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
-                <a ng-disabled="_loading"
-                   ui-sref=".new"
-                   class="btn btn-success">
+                <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp;
                   Add New Company
                 </a>
