--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -69,8 +69,8 @@
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
-              <button class="btn btn-success" ng-disabled="_loading || createForm.$invalid">
-                <i class="glyphicon glyphicon-ok"></i>&nbsp;
+              <button class="btn btn-success" type="submit" ng-class="{'btn-disabled':isReadOnly()}"  id="btnCreateAccount" ng-disabled="_loading || createForm.$invalid  || isReadOnly()">
+                <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp;
                 Create Company
               </button>
             </div>
