--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
-                <button ng-click="openCreateDialog()" class="btn btn-success" ng-disabled="_loading">
+                <button ng-click="openCreateDialog()" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New API Key
                 </button>
               </div>
@@ -102,7 +102,7 @@
                   <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit API Key">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteKey(item)" uib-tooltip="Delete API Key">
+                  <a href="" ng-if="!item.loading" ng-class="{'disabled': isReadOnly()}" ng-click="deleteKey(item)" uib-tooltip="Delete API Key">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
                 </td>
