--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -115,7 +115,7 @@
                 <a ui-sref=".edit({id: user.user_id})" uib-tooltip="Edit User Profile">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
-                <a href="" ng-click="deleteUser(user)" uib-tooltip="Delete User">
+                <a href="" ng-click="deleteUser(user)" ng-class="{'disabled':isReadOnly()}"  uib-tooltip="Delete User">
                   <i class="glyphicon glyphicon-trash"></i>
                 </a>
               </td>
