--- a/code/dev/parts/logshippers/list.html
+++ b/code/dev/parts/logshippers/list.html
@@ -54,7 +54,7 @@
             <div class="col-md-12">
               <div class="form-inline pull-left">
                <div class="form-group">
-                <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
+                <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New Log Shipping Job
                 </a>
 
@@ -149,7 +149,7 @@
                   <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Job">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteJob(item)" uib-tooltip="Delete Job">
+                  <a href="" ng-if="!item.loading"  ng-class="{'disabled':isReadOnly()}"  ng-click="deleteJob(item)" uib-tooltip="Delete Job">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
                   <!-- “Pause With Log Piling” -->
