--- a/code/dev/parts/azure-subscriptions/list.html
+++ b/code/dev/parts/azure-subscriptions/list.html
@@ -81,7 +81,7 @@
                   <a ng-click="onViewSubscription($event,item)" ng-if="!item.loading" uib-tooltip="View">
                     <i class="fa fa-eye"></i>
                   </a>
-                  <a ng-click="openChangeStatusDialog(item)" _uisref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Change Status">
+                  <a ng-click="openChangeStatusDialog(item)" _uisref=".edit({id: item.id})" ng-if="!item.loading"  ng-class="{'disabled':isReadOnly()}"  uib-tooltip="Change Status">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
                 </td>
