--- a/code/dev/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/dev/parts/profile/directives/subscription-summary.tpl.html
@@ -6,7 +6,7 @@
       </colgroup>
       <tr>
         <td>Current Billing Plan</td>
-        <td>{{subscription.product_name}} <a uib-tooltip="Change Billing Plan" ui-sref="index.billing.plans" class="btn btn-xs btn-primary"><i class=" fa fa-arrow-circle-up"></i> Change Billing Plan</a></td>
+        <td>{{subscription.product_name}} <a uib-tooltip="Change Billing Plan" ng-if="isReadOnly()!==true" ui-sref="index.billing.plans" class="btn btn-xs btn-primary"><i class=" fa fa-arrow-circle-up"></i> Change Billing Plan</a></td>
       </tr>
       <tr>
         <td>Total Payments</td>
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <td>Next Billing</td>
-        <td>{{subscription.current_billing_amount_in_cents | MonetaryUnit| currency }} on {{subscription.next_assessment_at | date }} <a ng-href="{{subscription.billing_portal_link.url}}" class="btn btn-xs btn-primary" uib-tooltip="View Details" ng-disabled="!subscription.billing_portal_link.url" target="_blank"><i class="fa fa-eye"></i> View Details</a></td>
+        <td>{{subscription.current_billing_amount_in_cents | MonetaryUnit| currency }} on {{subscription.next_assessment_at | date }} <a ng-if="isReadOnly()!==true" ng-href="{{subscription.billing_portal_link.url}}" class="btn btn-xs btn-primary" uib-tooltip="View Details" ng-disabled="!subscription.billing_portal_link.url" target="_blank"><i class="fa fa-eye"></i> View Details</a></td>
       </tr>
       <tr>
         <td>Status </td>
@@ -52,7 +52,7 @@
         <td>
           <span ng-if="!!subscription.credit_card">{{subscription.credit_card.masked_card_number}}</span>
           <strong ng-if="!subscription.credit_card"> No card on file </strong>
-          <a ng-href="{{subscription.billing_portal_link.url}}" class="btn btn-xs btn-primary" uib-tooltip="Update Payment Profile" ng-disabled="!subscription.billing_portal_link.url" target="_blank"><i class="glyphicon glyphicon-lock"></i> Update Payment Profile</a>
+          <a  ng-if="isReadOnly()!==true" ng-href="{{subscription.billing_portal_link.url}}" class="btn btn-xs btn-primary" uib-tooltip="Update Payment Profile" ng-disabled="!subscription.billing_portal_link.url" target="_blank"><i class="glyphicon glyphicon-lock"></i> Update Payment Profile</a>
         </td>
       </tr>
       <tr>
