--- a/code/dev/parts/profile/statements.html
+++ b/code/dev/parts/profile/statements.html
@@ -59,7 +59,7 @@
                 </div>
 
 
-                <div class="panel-heading">
+                <div class="panel-heading" ng-if="isReadOnly() !== true">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body"  ng-if="isReadOnly() !== true">
                     <div class="alert alert-info" ng-if="_loading">
                         <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
                         Loading...
@@ -108,7 +108,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="panel-heading">
+                <div class="panel-heading" ng-if="isReadOnly() !== true">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" ng-if="isReadOnly() !== true">
                     <div class="alert alert-info" ng-if="_loading">
                         <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
                         Loading...
