Fix positions tooltips for New Answer on DNS Zone Record

--- a/code/dev/parts/dns_zone_records/dns-zone-record-answer/dns-zone-record-answer.tpl.html
+++ b/code/dev/parts/dns_zone_records/dns-zone-record-answer/dns-zone-record-answer.tpl.html
@@ -3,7 +3,7 @@
     <p>Domain points to</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='A'" name="recordType_A" type="text" class="form-control inline-block" placeholder="12.34.56.78" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_A" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_A" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_A.$error" role="alert" ng-messages-multiple>
@@ -15,7 +15,7 @@
     <p>Domain points to</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='AAAA'" name="recordType_AAAA" type="text" class="form-control inline-block" placeholder="2001::beef" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_AAAA" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_AAAA" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_AAAA.$error" role="alert" ng-messages-multiple>
@@ -38,7 +38,7 @@
     <p>Domain is an alias for</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='ALIAS'" name="recordType_ALIAS" type="text" class="form-control inline-block" placeholder="alias.example.com" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_ALIAS" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_ALIAS" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_ALIAS.$error" role="alert" ng-messages-multiple>
@@ -50,7 +50,7 @@
     <p>Domain is an alias for</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='CNAME'" name="recordType_CNAME" type="text" class="form-control inline-block" placeholder="cname.{{zone_name}}" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_CNAME" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_CNAME" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_CNAME.$error" role="alert" ng-messages-multiple>
@@ -62,7 +62,7 @@
     <p>DNS tree is an alias for</p>
     <p>
       <input name="recordType_DNAME" ng-required="!create_linked&&$ctrl.recordType=='DNAME'" type="text" class="form-control inline-block" placeholder="dname.{{zone_name}}" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_DNAME" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_DNAME" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_DNAME.$error" role="alert" ng-messages-multiple>
@@ -74,7 +74,7 @@
     <p>Host hardware is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='HINFO'" name="recordType_HINFO_hardware" type="text" class="form-control inline-block" placeholder="PC-Intel-3200mhz" ng-model="$ctrl.newanswer.hardware">
-      <label for="recordType_HINFO_hardware" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_HINFO_hardware" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeHINFOForm.recordType_HINFO_hardware.$error" role="alert" ng-messages-multiple>
@@ -84,7 +84,7 @@
     <p>With operating system</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='HINFO'" name="recordType_HINFO_os" type="text" class="form-control inline-block" placeholder="Ubuntu 13.04" ng-model="$ctrl.newanswer.os">
-      <label for="recordType_HINFO_os" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_HINFO_os" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeHINFOForm.recordType_HINFO_os.$error" role="alert" ng-messages-multiple>
@@ -96,7 +96,7 @@
     <p>Mail is handled by</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='MX'" name="host" type="text" class="form-control inline-block" placeholder="mail.{{zone_name}}" ng-model="$ctrl.newanswer.host">
-      <label for="host" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="host" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeMXForm.host.$error" role="alert" ng-messages-multiple>
@@ -106,7 +106,7 @@
     <p>With priority</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='MX'" name="priority" type="number" class="form-control inline-block" placeholder="10" ng-model="$ctrl.newanswer.priority">
-      <label for="priority" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="priority" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeMXForm.priority.$error" role="alert" ng-messages-multiple>
@@ -145,7 +145,7 @@
     <p>DNS is handled by</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='NS'" name="recordType_NS" type="text" class="form-control inline-block" placeholder="ns1.{{zone_name}}" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_NS" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_NS" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_NS.$error" role="alert" ng-messages-multiple>
@@ -157,7 +157,7 @@
     <p>Reverse DNS points to</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='PTR'" name="recordType_PTR" type="text" class="form-control inline-block" placeholder="host.{{zone_name}}" ng-model="$ctrl.newanswer.value">
-      <label for="recordType_PTR" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_PTR" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_PTR.$error" role="alert" ng-messages-multiple>
@@ -169,7 +169,7 @@
     <p>Email of person responsible for this host is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='RP'" name="recordType_RP_email" type="email" class="input inline-block" placeholder="host.{{zone_name}}" ng-model="$ctrl.newanswer.email">
-      <label for="recordType_RP_email" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_RP_email" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_RP_email.$error" role="alert" ng-messages-multiple>
@@ -179,7 +179,7 @@
     <p>Domain for which <span class="badge">TXT</span> record exists is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='RP'" name="recordType_RP_txt_dname" type="text" class="form-control inline-block" placeholder="{{zone_name}}" ng-model="$ctrl.newanswer.txt_dname">
-      <label for="recordType_RP_txt_dname" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="recordType_RP_txt_dname" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="answerForm.recordType_RP_txt_dname.$error" role="alert" ng-messages-multiple>
@@ -201,7 +201,7 @@
     <p>Priority of target host is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='SRV'" name="_priority" type="number" class="form-control inline-block" placeholder="10" ng-min="0" ng-model="$ctrl.newanswer.priority">
-      <label for="_priority" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="_priority" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeSRVForm._priority.$error" role="alert" ng-messages-multiple>
@@ -211,7 +211,7 @@
     <p>Relative weight for hosts with same priority is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='SRV'" name="_weight" type="number" class="form-control inline-block" placeholder="5" ng-min="0" ng-model="$ctrl.newanswer.weight">
-      <label for="_weight" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="_weight" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeSRVForm._weight.$error" role="alert" ng-messages-multiple>
@@ -221,7 +221,7 @@
     <p>TCP/UDP service port is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='SRV'" name="_port" type="number" class="form-control inline-block" placeholder="5060" ng-model="$ctrl.newanswer.port">
-      <label for="_port" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="_port" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeSRVForm._port.$error" role="alert" ng-messages-multiple>
@@ -231,7 +231,7 @@
     <p>Host providing service is</p>
     <p>
       <input ng-required="!create_linked&&$ctrl.recordType=='SRV'" name="_host" type="text" class="form-control inline-block" placeholder="sip.{{zone_name}}" ng-model="$ctrl.newanswer.host">
-      <label for="_host" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+      <label for="_host" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
          <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="recordTypeSRVForm._host.$error" role="alert" ng-messages-multiple>
@@ -243,7 +243,7 @@
     <p>
       <div class="col-sm-12 form-group">
         <textarea ng-required="!create_linked&&$ctrl.recordType=='TXT'" name="recordType_TXT" rows="1" class="form-control inline-block" placeholder="Freeform text" ng-model="$ctrl.newanswer.value"></textarea>
-        <label for="recordType_TXT" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
+        <label for="recordType_TXT" class="text text-info" popover-append-to-body="false" popover-trigger="mouseenter" uib-popover="TODO text Specify answer fields depending on the record type">
           <i class="fa fa-question-circle"></i>
         </label>
       </div>
